# my-python-program

./: README.md  case_study.py  main.py  name.py  pyproject.toml  student_database.db  sum.py  unicodes.py
semi_end_exam_pyth/: Three_b.py  student_info.db  student_info.py
unit-1/: factorial .py  range-even-odd-num.py
unit-2/: 2nd_small_large.py  Acronym_gene.py  count_let_str.py  diff_2_lists.py  fibonacci.py  gcd_recu.py  mCr.py  max_min_dic.py  name.py  product_recu.py  remove_key_dicr.py  specified_list.py  string_unicodes.py  tuple_1st_2nd_squre.py  x_x*x_dic.py
unit-4/: Assignment-4  student_info.py
