[tool.poetry]
name = "repl_python3_my-python-program"
version = "0.1.0"
description = ""
authors = ["Avinash7223 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
